// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClockContainer updates clock and message when time changes 1`] = `
<ClockContainer>
  <div
    id="clock-wrapper"
  >
    <NameForm
      visible={true}
    />
    <Time
      hour="18"
      minute="59"
      visible={false}
    >
      <div
        id="clock"
      >
        <span
          id="hour"
        >
          18
        </span>
        <span
          id="minute"
        >
          59
        </span>
      </div>
    </Time>
    <UnderClockMessage
      message="Message Under Clock"
      visible={false}
    >
      <div
        id="message-under-clock"
      >
        Message Under Clock
      </div>
    </UnderClockMessage>
  </div>
</ClockContainer>
`;

exports[`ClockContainer updates clock and message when time changes 2`] = `
<ClockContainer>
  <div
    id="clock-wrapper"
  >
    <NameForm
      visible={true}
    />
    <Time
      hour="19"
      minute="59"
      visible={false}
    >
      <div
        id="clock"
      >
        <span
          id="hour"
        >
          19
        </span>
        <span
          id="minute"
        >
          59
        </span>
      </div>
    </Time>
    <UnderClockMessage
      message="Message Under Clock"
      visible={false}
    >
      <div
        id="message-under-clock"
      >
        Message Under Clock
      </div>
    </UnderClockMessage>
  </div>
</ClockContainer>
`;
